--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,11 +14,16 @@
   -->
 <resources>
 
+
+
     <style name="Theme.Jetsnack" parent="Theme.Material.DayNight.NoActionBar">
         <item name="android:colorPrimary">#ff00ff</item>
         <item name="android:colorAccent">#ff00ff</item>
         <item name="android:dialogTheme">@style/Theme.DialogFullScreen</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/shuimo</item>
+
     </style>
+
 
     <style name="Theme.Material.DayNight.NoActionBar" parent="@android:style/Theme.Material.Light.NoActionBar" />
 
